[package]
name = "unreal_devtool"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe  = "0.27.2"                               # GUI framework
winreg  = "0.52.0"                               # Find Unreal Engine via registry
rfd     = "0.14"                                 # Native file/folder picker
image   = { version = "0.25", features = ["gif"] } # GIF frame decoding
rodio   = { version = "0.22", default-features = false, features = ["playback", "mp3"] } # MP3 playback
wry               = "0.40"                       # Embedded WebView2 (Cookie Clicker / Sponder Bird / 3D Miku)
raw-window-handle = "0.6"                        # Bridge winit's window handle to wry
ureq    = { version = "2.10", features = ["json", "tls"] } # GitHub release check / self-update download
serde   = { version = "1", features = ["derive"] }          # Parse GitHub release JSON

[profile.release]
opt-level   = 3       # full optimisation
lto         = true    # link-time optimisation across all crates
codegen-units = 1     # single codegen unit, enables better LTO
strip       = true    # strip debug symbols → smaller binary
